
Some simple new functions have been added - map, omap, until, switch.

The modulus operator (%) may be used in math expressions. This is
implemented by std::fmod.

Low-level comparison and relational functions have been added.

Corrected the behaviors of pushd and popd. Added dirs to display
directory stack.

Added a rudimentary jobs command.

Readline now has tab-complete for functions & binaries in path.

The init-file is now .xsrc (since es and xs are not compatible).

[implementation] The Ref() macros have been replaced with the Ref RAII-style class, which is much cleaner
and removed the need for RefEnd()s. varbegin()/varend() are wrapped around by
a similar class. (This is the most significant reason for using c++.)

Many old compatibility cludges (like reiser cpp support) have been dropped.

The old Es changelog follows:

CHANGES		-*- mode: indented-text -*- ($Revision: 1.4 $)
=======

0.9-alpha2 to 0.9beta
---------------------

Prototypes are only provided if they are not in the standard header
files.  

Es no longer provides its own strerror.  If there is a strerror, it is
used.  If not, we try a hack with sys_errlist.  Hopefully one of these
two will be there.

Es now supports building in directories that are not the source
directory.  This follows the standard GNU $(srcdir) conventions.

The POSIX sigsetjmp problem appeared again in the form of a macro in
some versions of linux.  Therefore, there is yet another little
conditional around the setjmp and longjmp macros to make sure that all
is ok.

0.9-alpha1 to 0.9-alpha2
-----------------------

Es now uses GNU autoconf rather than the config.h/stdenv.h model.

Another version of getenv.  Some libraries and operating systems do
funny things with getenv, making the back mentioned below fail, dumping
core in getopt (linux and GNU getopt) and before main(!) (FreeBSD 2.1.0)
demonstrated this. 

Variable argument lists for variable arity C functions are not lvalues.