@@ -671,6 +671,28 @@ let (dlist = .) {
 	}
 }
 
+#
+# History list
+#
+
+fn history {|*|
+	if {access -f $history} {
+		if {~ $#* 0} {
+			cat $history|nl
+		} else if {~ $* -c} {
+			true > $history
+		} else if {~ $*(1) -d} {
+			{~ $#* 2} && let (n = $*(2)) && ed -s $history <<EOF
+$n
+d
+w
+q
+EOF
+		} else {
+			cat $history|nl|tail -n $*
+		}
+	}
+}
 
 #
 # Hook functions
